Gaim: The Pimpin' Penguin IM Clone that's good for the soul!

version 0.76cvs:
	* WYSIWYG text input
	* Chatroom list support (Tim Ringenbach)
	* Improved accessibility support for screen readers and other
	  accessibility tools (Marc Mulcahy)
	* Improved accessibility in conversation windows (Nathan Fredrickson)
	* Keyboard access to context menus via Shift+F10 (Marc Mulcahy)
	* Non-ascii character support in AIM chats (Uli Luckas)
	* Improved local IP address detection (Tim Ringenbach)
	* Local IP address information can be changed in Preferences
	  (Tim Ringenbach)
	* Yet Another IRC channel user duplication bugfix (Tim Ringenbach)
	* TCL Plugin API changed
	* Tabs now stay green when they are supposed to (Etan Reisner)
	* Offline accounts in account drop-down lists are now greyed (Etan Reisner)
	* Gadu-Gadu might actually connect again (Ignacy Gawedzki)
	* Catalan translation updated (Xan (DXpublica))
	* Danish translation updated (Morten Brix Pedersen (mbrix))
	* English (British) translation updated (Luke Ross (lukeross))
	* Hebrew translation had 1 character removed (Ambrose C. LI)
	* Russian translation updated (Alexandre Prokoudine)
	* Spanish translation updated (Javier Fernandez-Sanguino Pena and
	  Francisco Javier F. Serrador)

version 0.75 (01/09/2004):
	* New Yahoo! auth method
	* Yahoo! file transfer (Tim Ringenbach)
	* Yahoo! chat joining fixes (Tim Ringenbach)
	* Persons can auto-expand when hovering your mouse over it
	* Improved i18n support for MSN email notification (Felipe Contreras)
	* Jabber SASL PLAIN support
	* Improved Jabber MUC (Chat) support
	* Fixed an MSN login bug some people likely experienced (Felipe Contreras)
	* Touch-up various dialogs to follow the Gnome Human Interface
	  Guidelines more closely (Steven Garrity, Nathan Fredrickson, and
	  Ka-Hing Cheung)
	* Works better with all-black gtk themes (Etan Reisner)
	* Mozilla Firebird support (Chris (darth_sebulba04))
	* Catalan translation updated (Xan (DXpublica))