@@ -131,6 +131,16 @@ void gaim_prefs_init() {
 	gaim_prefs_add_int("/core/contact/idle_score", 1);
 }
 
+void
+gaim_prefs_uninit()
+{
+	if (prefs_save_timer != 0) {
+		g_source_remove(prefs_save_timer);
+		prefs_save_timer = 0;
+		gaim_prefs_sync();
+	}
+}
+
 static char *
 get_path_dirname(const char *name)
 {
